<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">
    <EditText
        android:id="@+id/username"
        android:layout_width="match_parent"
        android:inputType="text"
        android:hint="@string/username"
        android:layout_height="wrap_content" />
    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:inputType="textPassword"
        android:hint="@string/password"
        android:layout_height="wrap_content" />
    <EditText
        android:id="@+id/confirmPass"
        android:layout_width="match_parent"
        android:inputType="textPassword"
        android:hint="@string/confirmPass"
        android:layout_height="wrap_content" />
    <EditText
        android:id="@+id/phone"
        android:layout_width="match_parent"
        android:inputType="text"
        android:hint="@string/phone"
        android:layout_height="wrap_content" />
    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/userClass"
        android:orientation="horizontal">
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/normal"
            android:text="@string/normalUser"
            android:checked="true"/>
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/profession"
            android:text="@string/professionUser"
            android:checked="false"/>
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/base"
            android:text="@string/baseUser"
            android:checked="false"/>
    </RadioGroup>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
            android:id="@+id/signin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/backSignin"/>
        <Button
            android:id="@+id/signup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/signup"/>
    </LinearLayout>
</LinearLayout>